[package]
name = "wrenlet-sys"
authors = ["Cameron Brownsey <root@cbrownsey.dev>"]
version = "0.1.0"
edition = "2021"
description = "Bindings to the `Wren` C library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cbrownsey/wren-sys"

[dependencies]

[build-dependencies]
cc = "1.0"

[features]
default = ["meta", "random", "wren_v0_4_0"]
meta = []
random = []

wren_v0_4_0 = []
